# RetroFE

./: .gitignore  .hgignore  .project  Build Instructions.txt  LICENSE.txt  README.md  contributors.txt
Assets/Environment/Common/: Settings.conf
Assets/Environment/Common/Launchers/: Fceux.conf  HyperLaunch.conf  MAME.conf  Nestopia.conf
CMake/: FindGStreamer.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake
Configuration/: Configuration.sln
Configuration/Configuration/: App.xaml  App.xaml.cs  Builder.cs  ConfFileParser.cs  ConfFileSaver.cs  Configuration.csproj  MainWindow.xaml  MainWindow.xaml.cs  MenuParser.cs  RelayCommand.cs  RetroFE.cs
Configuration/Configuration/Converter/: CollectionExistsConverter.cs  InverseBooleanConverter.cs  InverseBooleanToVisibilityConverter.cs  NullToVisibilityConverter.cs
Configuration/Configuration/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Configuration/Configuration/View/: AddRemoveList.xaml  AddRemoveList.xaml.cs  Collection.xaml  Collection.xaml.cs  ControlInput.xaml  ControlInput.xaml.cs  Launcher.xaml  Launcher.xaml.cs  MainSettings.xaml  MainSettings.xaml.cs
Configuration/Configuration/ViewModel/: CollectionListVM.cs  CollectionVM.cs  ControllerVM.cs  LauncherListVM.cs  LauncherVM.cs  MainVM.cs
Documentation/Manual/: Configuration.rst  Installation.rst  Layouts.rst  Makefile  Overview.rst  Troubleshooting.rst  conf.py  easing.swf  index.rst  make.bat
Package/Environment/Common/: README.txt  Settings.conf  controls.conf  settings.conf
RetroFE/CMake/: FindGStreamer.cmake  FindSDL.cmake  FindSDL2.cmake  FindSDL2_ttf.cmake  FindSDL_gfx.cmake  FindSDL_image.cmake  FindSDL_mixer.cmake  FindSDL_ttf.cmake
RetroFE/DesignNotes/UML/: Components.class.violet.html  Item Database Access.class.violet.html  Menu List rendering.class.violet.html  Overview.class.violet.html  Page Building.class.violet.html  Video Component.class.violet.html
RetroFE/Source/: CMakeLists.txt  Lua.h  LuaEvents.cpp  LuaEvents.h  Main.cpp  RetroFE.cpp  RetroFE.h  SDL.cpp  SDL.h  StateMachine.cpp  StateMachine.h  Version.cpp  Version.h
RetroFE/Source/Collection/: CollectionInfo.cpp  CollectionInfo.h  CollectionInfoBuilder.cpp  CollectionInfoBuilder.h  Item.cpp  Item.h  MenuParser.cpp  MenuParser.h
RetroFE/Source/Control/: InputHandler.h  JoyAxisHandler.cpp  JoyAxisHandler.h  JoyButtonHandler.cpp  JoyButtonHandler.h  JoyHatHandler.cpp  JoyHatHandler.h  KeyboardHandler.cpp  KeyboardHandler.h  MouseButtonHandler.h  UserInput.cpp  UserInput.h
RetroFE/Source/Database/: CollectionDatabase.cpp  CollectionDatabase.h  Configuration.cpp  Configuration.h  DB.cpp  DB.h  MamelistMetadata.cpp  MamelistMetadata.h  Metadata.h  MetadataDatabase.cpp  MetadataDatabase.h
RetroFE/Source/Execute/: AttractMode.cpp  AttractMode.h  Launcher.cpp  Launcher.h
RetroFE/Source/Graphics/: ComponentItemBinding.cpp  ComponentItemBinding.h  ComponentItemBindingBuilder.cpp  ComponentItemBindingBuilder.h  Font.cpp  Font.h  FontCache.cpp  FontCache.h  MenuNotifierInterface.h  Page.cpp  Page.h  PageBuilder.cpp  PageBuilder.h  ViewInfo.cpp  ViewInfo.h
RetroFE/Source/Graphics/Animate/: Animation.cpp  Animation.h  AnimationChain.cpp  AnimationChain.h  AnimationEvents.cpp  AnimationEvents.h  AnimationManager.cpp  AnimationManager.h  Tween.cpp  Tween.h  TweenSet.cpp  TweenSet.h  TweenSets.cpp  TweenSets.h  TweenTypes.h
RetroFE/Source/Graphics/Component/: Battery.cpp  Battery.h  Component.cpp  Component.h  ComponentData.h  ComponentFactory.cpp  ComponentFactory.h  Container.cpp  Container.h  Image.cpp  Image.h  ImageBuilder.cpp  ImageBuilder.h  ReloadableMedia.cpp  ReloadableMedia.h  ReloadableScrollingText.cpp  ReloadableScrollingText.h  ReloadableText.cpp  ReloadableText.h  ScrollingList.cpp  ScrollingList.h  ScrollingText.cpp  ScrollingText.h  Text.cpp  Text.h  Video.cpp  Video.h  VideoBuilder.cpp  VideoBuilder.h  VideoComponent.cpp  VideoComponent.h
RetroFE/Source/Lua/: Lua.cpp  LuaAnimate.cpp  LuaAnimate.h  LuaCollection.cpp  LuaCollection.h  LuaDisplay.cpp  LuaDisplay.h  LuaEvent.cpp  LuaEvent.h  LuaImage.cpp  LuaImage.h  LuaLog.cpp  LuaLog.h
RetroFE/Source/Menu/: Menu.cpp  Menu.h  MenuMode.cpp  MenuMode.h
RetroFE/Source/Sound/: Sound.cpp  Sound.h
RetroFE/Source/Utility/: Log.cpp  Log.h  Utils.cpp  Utils.h
RetroFE/Source/Video/: GStreamerVideo.cpp  GStreamerVideo.h  IVideo.h  NullVideo.cpp  NullVideo.h  VideoFactory.cpp  VideoFactory.h
RetroFE/UnitTest/: testgtest.cpp
Scripts/: Package.py
Scripts/Raspi2/: install.sh
Source/: CMakeLists.txt  Main.cpp  RetroFE.cpp  RetroFE.h  SDL.cpp  SDL.h  Version.cpp  Version.h
Source/Collection/: CollectionInfo.cpp  CollectionInfo.h  CollectionInfoBuilder.cpp  CollectionInfoBuilder.h  Item.cpp  Item.h  MenuParser.cpp  MenuParser.h
Source/Control/: UserInput.cpp  UserInput.h
Source/Database/: CollectionDatabase.cpp  CollectionDatabase.h  Configuration.cpp  Configuration.h  DB.cpp  DB.h  MamelistMetadata.cpp  MamelistMetadata.h  Metadata.h
Source/Execute/: AttractMode.cpp  AttractMode.h  Launcher.cpp  Launcher.h
Source/Graphics/: ComponentItemBinding.cpp  ComponentItemBinding.h  ComponentItemBindingBuilder.cpp  ComponentItemBindingBuilder.h  Font.cpp  Font.h  FontCache.cpp  FontCache.h  MenuNotifierInterface.h  Page.cpp  Page.h  PageBuilder.cpp  PageBuilder.h  ViewInfo.cpp  ViewInfo.h
Source/Graphics/Animate/: Tween.cpp  Tween.h  TweenTypes.h
Source/Graphics/Component/: Component.cpp  Component.h  Container.cpp  Image.cpp  Image.h  ImageBuilder.cpp  ImageBuilder.h  ReloadableMedia.cpp  ReloadableMedia.h  ReloadableText.cpp  ReloadableText.h  ScrollingList.cpp  ScrollingList.h  Text.cpp  Text.h  VideoBuilder.cpp  VideoBuilder.h  VideoComponent.cpp  VideoComponent.h
Source/Sound/: Sound.cpp  Sound.h
Source/Utility/: Log.cpp  Log.h  Utils.cpp  Utils.h
Source/Video/: GStreamerVideo.cpp  GStreamerVideo.h  IVideo.h  VideoFactory.cpp  VideoFactory.h
Tools/dos2unix/: README.txt
UnitTest/: CMakeLists.txt
UnitTest/RetroFE/Utility/: Utils_UnitTest.cpp
(+163 files in other folders)
